[metadata]
name = fairycloud
version = attr: fairycloud.__version__
url = https://www.fairycloud.com/
author = Fairycloud Team
author_email = kycoolcool@gmail.com
description = 模型即接口框架.
long_description = file: README.md
packages = find:
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: Chinese (Simplified)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.6
packages = fairycloud
include_package_data = true
zip_safe = false
install_requires =
    django >= 3.0.0
    djangorestframework >= 3.10
    pydash >= 4.7.6
